--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,39 @@ body {
     margin: 0% 3% 0% 15%;
 }
 
+/* *** My section avatar settings *** */
+
+#div-innavbar {
+    width: auto;
+    height: 35%;
+    padding: 5% 5% 0% 7%;
+    display: inline-block;
+}
+
+#img-avatar {
+    width: 88%;
+    height: 52%;
+    border-radius: 50%;
+    margin: 5% 0 0 7%;
+}
+
+#side-nav p {
+    font-family: 'Amethysta', serif;
+    padding: 0%;
+}
+
+#p-myname {
+    color: #2C49E8;
+    font-size: 130%;
+    margin: 8px 0% 0% 6px;
+}
+
+#p-career {
+    font-weight: bold;
+    color: darkslategray;
+    margin: 2% 0% 0% 5%;
+}
+
 /* *** Side navbar settings *** */
 
 #side-nav {
@@ -18,51 +51,29 @@ body {
     top: 0;
     left: 0;
     background-color: rgb(203, 187, 255);
-    box-shadow: -7px 0px 25px /* 0.05px */ black;
-    /* box-shadow: 10px 16px 40px 0.1px black; */
-}
-
-#side-nav #div-innavbar {
-    width: auto;
-    height: 25%;
-    padding: 5% 5% 5% 7%;
-    display: inline-block;
-}
-
-/* My avatar settings */
-
-#side-nav #img-avatar {
-    width: 95%;
-    height: 78%;
-    border-radius: 50%;
-    margin: 6% 0% 0% 5%;
-}
-
-#side-nav #p-myname {
-    /* font-family: 'Alegreya', serif; */
-    font-family: 'Amethysta', serif;
-    color: #2C49E8;
-    font-size: 130%;
-    margin: 8px 0% 0% 6px;
-    padding: 0%;
+    box-shadow: -7px 0px 25px black;
 }
 
 #side-nav ul {
     padding: 0% 0% 0% 0%;
-    margin: 15% 0% 0% 16%;
+    margin: 15% 0% 0% 0%;
 }
 
 #side-nav li {
     list-style-type: none;
     text-align: left;
+    padding: 12px 0px 12px 22px;
+}
+
+#side-nav li:hover {
+    /* background-color: rgb(195, 177, 255); */
+    cursor: pointer;
+    box-shadow: inset 1px 0px 3px black;
+    /* box-shadow: 0px 0px 15px black; */
 }
 
 #side-nav a {
     text-decoration: none;
-    font-size: 180%;
+    font-size: 140%;
     color: #000000;
-}
-
-#side-nav a:hover {
-    color: #f1f1f1;
 }
