--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,23 @@
 
 body {
     background-color: rgb(247, 244, 253);
+    margin: 0%;
 }
 
 #div-main-container {
-    font-size: 200%;
-    margin: 0% 3% 0% 15%;
+    margin: 0% 0% 0% 11%;
+}
+
+#div-main-container h2 {
+    background-color: #84C3E8;
+    padding: 2% 0% 2% 3%;
+    margin: 0%;
+    box-shadow: 0px 1px 3px black;
+}
+
+.div-page {
+    margin: 4% 10% 4% 10%;
+    height: 700px;
 }
 
 /* *** My section avatar settings *** */
