--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,7 @@ body {
     box-shadow: 0px 1px 3px black;
 }
 
-.div-page {
-    margin: 4% 10% 4% 10%;
-    height: 700px;
-}
-
-/* *** My section avatar settings *** */
+/* *** My avatar section settings *** */
 
 #div-innavbar {
     width: auto;
@@ -78,14 +73,37 @@ body {
 }
 
 #side-nav li:hover {
-    /* background-color: rgb(195, 177, 255); */
     cursor: pointer;
     box-shadow: inset 1px 0px 3px black;
-    /* box-shadow: 0px 0px 15px black; */
 }
 
 #side-nav a {
     text-decoration: none;
     font-size: 140%;
-    color: #000000;
+    color: black;
+}
+
+/* *** Website pages (sections) *** */
+.div-page {
+    margin: 0% 10% 4% 10%;
+    height: 700px;
+}
+
+#ul-skills li {
+    list-style-type: square;
+    padding: 1% 0% 0% 0%;
+    margin: 0% 0% 0% 2%;
+    font-size: 110%;
+    color: rgb(27, 43, 43);
+}
+
+#ul-skills label {
+    display: inline-block;
+    font-size: 200%;
+    margin: 4% 0% 0% 0%;
+}
+
+#ul-skills hr {
+    color: rgba(179, 179, 179, 0.3);
+    margin: 1% 0% 0% 0%;
 }
