--- a/css/responsive.css
+++ b/css/responsive.css
@@ -305,9 +305,17 @@
 
 @media only screen and (max-device-width: 480px) {
     #img-avatar {
-        width: 54px;
-        margin: 3px 0 0 4px;
+        width: 35px;
+        margin: 3px 0 0 3px;
         box-shadow: 0px 0px 15px black;
         border: 1px solid rgb(0, 240, 108);
+    }
+    #p-myname {
+        margin: -1px 0 0 4px;
+        font-size: 28%;
+    }
+    #p-career {
+        margin: 0.8px 0 0 7.6px;
+        font-size: 5%;
     }
 }
