--- a/css/responsive.css
+++ b/css/responsive.css
@@ -236,8 +236,6 @@
     }
 }
 
-
-
 /* Browser at 400% */
 
 @media only screen and (max-width: 480px) {
@@ -268,7 +266,9 @@
     #div-main-container {
         font-size: 30%;
     }
-}/* Browser at 500% */
+}
+
+/* Browser at 500% */
 
 @media only screen and (max-width: 390px) {
     /* Navbar */
@@ -276,7 +276,6 @@
         width: 32px;
         margin: 1.4px 0 0 2.5px;
         box-shadow: 0px 0px 15px black;
-        border: 1px solid rgb(240, 0, 0);
     }
     #p-myname {
         margin: -1px 0 0 4px;
@@ -317,5 +316,13 @@
     #p-career {
         margin: 0.8px 0 0 7.6px;
         font-size: 5%;
+    }
+
+    /* Navbar properties */
+    #side-nav{
+        /* visibility: hidden; */
+            position: fixed;
+            height: 4%;
+            width: 100%;
     }
 }
