--- a/css/responsive.css
+++ b/css/responsive.css
@@ -304,8 +304,8 @@
 
 @media only screen and (max-device-width: 480px) {
     #img-avatar {
-        width: 35px;
-        margin: 3px 0 0 3px;
+        width: 28px;
+        margin: -11px 0 0 -20px;
         box-shadow: 0px 0px 15px black;
         border: 1px solid rgb(0, 240, 108);
     }
@@ -322,7 +322,10 @@
     #side-nav{
         /* visibility: hidden; */
             position: fixed;
-            height: 4%;
+            height: 6%;
             width: 100%;
+    }
+    #side-nav ul {
+        visibility: hidden;
     }
 }
