--- a/css/responsive.css
+++ b/css/responsive.css
@@ -305,16 +305,16 @@
 @media only screen and (max-device-width: 480px) {
     #img-avatar {
         width: 28px;
-        margin: -2px 0 0 -15px;
+        margin: -4px 0 0 -15px;
         box-shadow: 0px 0px 15px black;
         border: 1px solid rgb(0, 240, 108);
     }
     #p-myname {
-        margin: -35px 0 0 135px;
+        margin: -38px 0 0 132px;
         font-size: 90%;
     }
     #p-career {
-        margin: 0px 0 0 148px;
+        margin: -2px 0 0 145px;
         font-size: 60%;
     }
     /* Navbar properties */
@@ -325,5 +325,14 @@
     }
     #side-nav ul {
         visibility: hidden;
+    }
+    /* Display layout */
+    #div-main-container {
+        margin: 0% 0% 0% 0%;
+    }
+    .div-page {
+        margin: 0% 10% 4% 0%;
+        height: auto;
+        min-height: 85vh;
     }
 }
