--- a/css/responsive.css
+++ b/css/responsive.css
@@ -307,7 +307,6 @@
         width: 28px;
         margin: -4px 0 0 -15px;
         box-shadow: 0px 0px 15px black;
-        border: 1px solid rgb(0, 240, 108);
     }
     #p-myname {
         margin: -38px 0 0 132px;
@@ -320,6 +319,7 @@
     /* Navbar properties */
     #side-nav {
         position: fixed;
+        background-color: rgb(218, 218, 218);
         height: 8%;
         width: 100%;
     }
@@ -328,7 +328,8 @@
     }
     /* Display layout */
     #div-main-container {
-        margin: 0% 0% 0% 0%;
+        margin: 0%;
+        padding-top: 8.2vh;
     }
     .div-page {
         margin: 0% 10% 4% 0%;
