--- a/css/style.css
+++ b/css/style.css
@@ -1,181 +1,17 @@
-/* ****** Global elements ****** */
-
-html {
-    scroll-behavior: smooth;
+main {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  width: 100%;
+  min-width: 95vh;
 }
 
-body {
-    background-color: rgb(255, 255, 255);
-    margin: 0%;
-    font-family: 'Assistant', sans-serif;
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+  background-color: rgb(129, 209, 255);
 }
-
-#div-main-container {
-    margin: 0% 0% 0% 11%;
-}
-
-#div-main-container h2 {
-    background-color: rgb(129, 209, 255);
-    padding: 2% 0% 2% 3%;
-    margin: 0%;
-    box-shadow: 0px 1px 3px black;
-}
-
-/* *** My avatar section settings *** */
-
-#div-innavbar {
-    width: auto;
-    height: 35%;
-    padding: 5% 5% 0% 7%;
-    display: inline-block;
-}
-
-#img-avatar {
-    width: 165px;
-    height: auto;
-    border-radius: 50%;
-    border: 1px solid rgb(175, 175, 175);
-    box-shadow: 0px 0px 20px black;
-    margin: 10px 0 0 10px;
-}
-
-#side-nav p {
-    padding: 0%;
-}
-
-#p-myname {
-    color: rgb(40, 126, 255);
-    font-size: 130%;
-    margin: 8px 0 0 25px;
-}
-
-#p-career {
-    color: darkslategray;
-    margin: 4px 0 0 38px;
-    font-size: 100%;
-    font-weight: bold;
-}
-
-/* *** Side navbar settings *** */
-
-#side-nav {
-    position: fixed;
-    height: 100%;
-    width: 12%;
-    background-color: rgb(246, 250, 255);
-    box-shadow: -7px 0px 25px black;
-}
-
-#side-nav ul {
-    padding: 0% 0% 0% 0%;
-    margin: 15% 0% 0% 0%;
-}
-
-#side-nav li {
-    list-style-type: none;
-    text-align: left;
-    padding: 12px 0px 12px 22px;
-}
-
-#side-nav li:hover {
-    cursor: pointer;
-    box-shadow: inset 1px 0px 3px black;
-    color: rgb(40, 126, 255);
-}
-
-#side-nav a {
-    text-decoration: none;
-    font-size: 140%;
-    color: black;
-}
-
-/* *** Website pages (sections) *** */
-
-.div-page {
-    margin: 0% 10% 4% 10%;
-    height: auto;
-    min-height: 85vh;
-}
-
-#ul-aboutme {
-    padding: 6% 15% 10% 15%;
-    font-size: 150%;
-    line-height: 140%;
-}
-
-#ul-aboutme li {
-    padding: 20px 0 10px 0;
-    color: rgb(44, 44, 44);
-    list-style-type: circle;
-}
-
-.div-page ul hr {
-    color: rgba(179, 179, 179, 0.3);
-    margin: 1% 0% 0% 0%;
-}
-
-.div-page label {
-    display: inline-block;
-    font-size: 200%;
-    margin: 4% 0% 0% 0%;
-}
-
-#ul-education li span {
-    color: rgb(255, 87, 87);
-}
-
-.div-page li {
-    list-style-type: square;
-    padding: 1% 0% 0% 0%;
-    margin: 0% 0% 0% 2%;
-    font-size: 110%;
-    color: rgb(27, 43, 43);
-}
-
-/* Experience section settings */
-
-#ul-experience p {
-    letter-spacing: 0.3px;
-    line-height: 140%;
-}
-
-.lbl-company {
-    float: right;
-    color: rgb(40, 126, 255);
-    font-size: 180%;
-}
-
-.lbl-title {
-    color: rgb(44, 44, 44);
-}
-
-/* Contact section list */
-
-#ul-contacts {
-    margin: 6% 0% 15% 0%;
-    width: 100%;
-}
-
-#ul-contacts li {
-    padding: 2% 0% 2% 0%;
-    list-style-type: none;
-}
-
-#ul-contacts a {
-    text-decoration: none;
-}
-
-#ul-contacts li a span {
-    font-size: 45%;
-}
-
-/* Contact icons settings */
-
-#ul-contacts .fa {
-    color: rgb(46, 45, 45);
-    font-size: 360%;
-}
-
-#ul-contacts .fa:hover {
-    color: rgb(40, 126, 255);
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
 }
