--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,42 @@
-main {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  width: 100%;
-  min-width: 95vh;
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "Assistant", sans-serif;
+  font-size: medium;
 }
 
-.div1 {
-  grid-area: 1 / 1 / 2 / 2;
-  background-color: rgb(129, 209, 255);
+.div-container {
+  display: grid;
+  grid-template-columns:2fr repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 25px;
+  grid-row-gap: 2px;
+  width: 100%;
+  min-width: 100vh;
+  grid-template-areas:
+    "header header header header header header"
+    "main main main main main main"
+    "main main main main main main"
+    "main main main main main main"
+    "main main main main main main"
+    "footer footer footer footer footer footer";
 }
-.div2 {
-  grid-area: 1 / 2 / 2 / 3;
+
+header {
+  grid-area: header;
+  background-color: darkgray;
+}
+.div-title img {
+}
+
+main {
+  grid-area: main;
+  background-color: rgb(187, 212, 177);
+}
+
+footer {
+  grid-area: footer;
+  background-color: darkgray;
 }
