--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -3,10 +3,7 @@
 /* Introduction Section */
 #intro {
   div {
-    background: linear-gradient(
-        rgba(192, 203, 204, 0.5),
-        rgba(192, 203, 204, 0.5)
-      ),
+    background: linear-gradient(rgba(95, 204, 255, 0.4), rgba(255, 255, 255, 0)),
       url($landscape_img_am_rhein) no-repeat top center/cover;
     position: absolute;
     z-index: -1;
