--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -3,6 +3,34 @@
   width: 100%;
 }
 
+/* *** Margins *** */
+.ml-1 {
+  margin-left: 0.5rem;
+}
+.ml-2 {
+  margin-left: 1rem;
+}
+.mr-1 {
+  margin-right: 0.5rem;
+}
+.mr-2 {
+  margin-right: 1rem;
+}
+.mr-3 {
+  margin-right: 1.5rem;
+}
+.mr-4 {
+  margin-right: 2rem;
+}
+.mr-5 {
+  margin-right: 2.5rem;
+}
+.mr-6 {
+  margin-right: 3rem;
+}
+.mr-7 {
+  margin-right: 3.5rem;
+}
 /* .navbar-logo {
   width: 60px;
   height: auto;
