--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,7 +4,9 @@
 $black: #151515;
 $gray: #323232;
 $blue-dark: #1a6dff;
+$blue-Lake: #489cf7;
 $pink-dark: #c822ff;
+
 $background-gradient: linear-gradient(#1a6dff, #c822ff);
 
 $dark_grey: #495f62;
