--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "base";
 @import "utilities";
 @import "responsive";
-@import "layout";
-@import "components";
+@import "navbar";
 @import "page";
